<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/main_menu_home" />

    <item
        android:id="@+id/main_menu_home_my_selections"
        android:enabled="true"
        android:icon="@drawable/ic_round_catalog_24"
        android:title="@string/main_menu_my_selections" />

    <item
        android:id="@+id/main_menu_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/main_menu_favorites" />

    <item
        android:id="@+id/main_menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_round_profile_24"
        android:title="@string/main_menu_profile" />

</menu>