<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_item_film_details"
    android:background="@color/ivi_blue_dark">

    <TextView
        android:id="@+id/details_description_film"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text="@tools:sample/lorem/random" />

</androidx.core.widget.NestedScrollView>